--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.1.4",
     "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
+    "framer-motion": "^11.11.8",
     "iconv-lite": "^0.6.3",
     "next": "14.2.13",
     "prettier": "^3.3.3",
